# Alexandria

./: .gitmodules  CMakeLists.txt  alexandriaVersionString.cmake  build_instructions.md  conanfile.py
applications/alexandria_cl/: CMakeLists.txt
applications/alexandria_cl/include/alexandria_cl/: specification.h
applications/alexandria_cl/src/: main.cpp  specification.cpp
examples/geometry/: CMakeLists.txt  clean.drawio  readme.md  search.drawio  types.drawio
examples/geometry/include/geometry/: actions.h  export.h  import.h  library.h  types.h  winutils.h
examples/geometry/models/: cube.mtl  monkey.mtl  sphere.mtl
examples/geometry/src/: actions.cpp  export.cpp  import.cpp  library.cpp  main.cpp  types.cpp  winutils.cpp
modules/alexandria/: CMakeLists.txt  alexandriaVersionString.cmake
modules/alexandria-core/: CMakeLists.txt
modules/alexandria-core/include/alexandria-core/: data_type.h  fwd.h  library.h  member.h  namespace.h  property.h  property_layout.h  type.h  type_descriptor.h  type_layout.h
modules/alexandria-core/src/: data_type.cpp  library.cpp  namespace.cpp  property.cpp  property_layout.cpp  type.cpp  type_layout.cpp
modules/alexandria-core/src/core/: data_type.cpp  library.cpp  namespace.cpp  property.cpp  type.cpp
modules/alexandria-core/src/member_types/: instance_id.cpp
modules/alexandria-core/src/properties/: instance_id.cpp
modules/alexandria/include/alexandria/: data_type.h  library.h  property.h  type.h
modules/alexandria/src/: data_type.cpp  library.cpp  property.cpp  type.cpp
modules/alexandria/src/core/: data_type.cpp  library.cpp  namespace.cpp  property.cpp  type.cpp
modules/alexandria/src/member_types/: instance_id.cpp
tests/alexandria-basic-query_test/: CMakeLists.txt
tests/alexandria-basic-query_test/src/: main.cpp
tests/alexandria-basic-query_test/src/delete/: delete_blob.cpp  delete_blob_array.cpp  delete_invalid.cpp  delete_primitive.cpp  delete_primitive_array.cpp  delete_primitive_blob.cpp  delete_reference.cpp  delete_reference_array.cpp  delete_string.cpp  delete_string_array.cpp
tests/alexandria-basic-query_test/src/get/: get_blob.cpp  get_blob_array.cpp  get_invalid.cpp  get_primitive.cpp  get_primitive_array.cpp  get_primitive_blob.cpp  get_reference.cpp  get_reference_array.cpp  get_string.cpp  get_string_array.cpp
tests/alexandria-basic-query_test/src/insert/: insert_blob.cpp  insert_blob_array.cpp  insert_invalid.cpp  insert_primitive.cpp  insert_primitive_array.cpp  insert_primitive_blob.cpp  insert_reference.cpp  insert_reference_array.cpp  insert_string.cpp  insert_string_array.cpp
tests/alexandria-basic-query_test/src/update/: update_blob.cpp  update_blob_array.cpp  update_invalid.cpp  update_primitive.cpp  update_primitive_array.cpp  update_primitive_blob.cpp  update_reference.cpp  update_reference_array.cpp  update_string.cpp  update_string_array.cpp
tests/alexandria-core_test/: CMakeLists.txt
tests/alexandria-core_test/src/: main.cpp
tests/alexandria-core_test/src/member_types/: member_type_blob.cpp  member_type_blob_array.cpp  member_type_blob_array_custom.cpp  member_type_blob_custom.cpp  member_type_instance_id.cpp  member_type_primitive_array.cpp  member_type_primitive_array_custom.cpp  member_type_primitive_blob.cpp  member_type_primitive_blob_custom.cpp  member_type_reference_array.cpp  member_type_string_array.cpp  member_type_string_array_custom.cpp
tests/alexandria-core_test/src/types/: create_type.cpp  create_type_blob.cpp  create_type_blob_array.cpp  create_type_nested.cpp  create_type_primitive.cpp  create_type_primitive_array.cpp  create_type_primitive_blob.cpp  create_type_reference.cpp  create_type_reference_array.cpp  create_type_string.cpp  create_type_string_array.cpp
tests/alexandria-extended-query_test/: CMakeLists.txt
tests/alexandria-extended-query_test/src/: main.cpp
tests/alexandria-extended-query_test/src/search_queries/: primitive_search.cpp  reference_search.cpp
tests/alexandria-extended-query_test/src/table_sets/: table_sets_blob.cpp  table_sets_blob_array.cpp  table_sets_nested.cpp  table_sets_primitive.cpp  table_sets_primitive_array.cpp  table_sets_primitive_blob.cpp  table_sets_query.cpp  table_sets_reference.cpp  table_sets_reference_array.cpp  table_sets_string.cpp  table_sets_string_array.cpp
tests/alexandria_test/: CMakeLists.txt
tests/alexandria_test/include/alexandria_test/: create_library.h  create_property.h  create_property_blob.h  create_property_nested.h  create_property_primitive.h  create_type_nested_array.h  create_type_nested_reference.h  type_add_property.h  utils.h
tests/alexandria_test/src/: create_library.cpp  create_property.cpp  create_property_blob.cpp  create_property_nested.cpp  create_property_primitive.cpp  create_type.cpp  create_type_blob.cpp  create_type_blob_array.cpp  create_type_nested.cpp  create_type_nested_array.cpp  create_type_nested_reference.cpp  create_type_primitive.cpp  create_type_primitive_array.cpp  create_type_primitive_blob.cpp  main.cpp  type_add_property.cpp  utils.cpp
tests/alexandria_test/src/create/: create_direct.cpp  create_managed.cpp  create_primitive.cpp  create_string.cpp
tests/alexandria_test/src/delete/: delete_blob.cpp  delete_blob_array.cpp  delete_direct.cpp  delete_invalid.cpp  delete_managed.cpp  delete_primitive.cpp  delete_primitive_array.cpp  delete_primitive_blob.cpp  delete_reference.cpp  delete_reference_array.cpp  delete_string.cpp  delete_string_array.cpp
tests/alexandria_test/src/get/: get_blob.cpp  get_blob_array.cpp  get_direct.cpp  get_invalid.cpp  get_managed.cpp  get_primitive.cpp  get_primitive_array.cpp  get_primitive_blob.cpp  get_reference.cpp  get_reference_array.cpp  get_string.cpp  get_string_array.cpp
tests/alexandria_test/src/insert/: insert_blob.cpp  insert_blob_array.cpp  insert_direct.cpp  insert_invalid.cpp  insert_managed.cpp  insert_primitive.cpp  insert_primitive_array.cpp  insert_primitive_blob.cpp  insert_reference.cpp  insert_string.cpp  (+2 more)
tests/alexandria_testutils/: CMakeLists.txt
tests/alexandria_testutils/src/: utils.cpp
(+372 files in other folders)
